# my-shared-wardrobe-backend

./:    .env  .gitignore  .gitlab-ci.yml  Cargo.toml  Procfile  README.md  Rocket.toml
drp-backend/: Cargo.toml
drp-rocket/: Cargo.toml  Procfile
src/: auth.rs  lib.rs  main.rs  models.rs  schema.rs
