[package]
name = "drp02-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
aws-config = "0.13.0"
aws-sdk-s3 = "0.13.0"
tokio = { version = "1", features = ["full"] }
image = "0.24.2"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[dependencies.rocket_auth]
version = "0.3.0"
features = ["sqlite-db", "redis-session"]